# online-payment-system

./: .gitignore
client/: README.md  package-lock.json  package.json
client/public/: index.html
client/src/: index.js
client/src/api/: organizationService.js  userService.js
client/src/app/: App.js
client/src/app/styles/: globals.scss  index.scss  reset.scss  variables.scss
client/src/components/Home/: index.js
client/src/config/: axios-instance.js
client/src/pages/: index.js
client/src/pages/Home/: Home.jsx
client/src/pages/NotfoundPage/: NotfoundPage.jsx  NotfoundPage.module.scss
client/src/pages/Organization/: Organization.jsx
client/src/store/: index.js
client/src/store/organization/: organizationActions.js  organizationSlice.js
client/src/store/user/: userActions.js  userSlice.js
client/src/widgets/Footer/: Footer.jsx  Footer.module.scss
client/src/widgets/Form/: LoginForm.jsx  LoginForm.module.scss  (+2 more)
server/: .gitignore  README.md  pyproject.toml
server/api/auth/: urls.py
server/api/v1/: urls.py
server/api/v1/organization/: serializers.py  views.py
server/api/v1/payment/: serializers.py  views.py
server/api/v1/transaction/: serializers.py  views.py
server/api/v1/user/: serializers.py  views.py
server/apps/organization/: admin.py  models.py
server/apps/payment/: apps.py
server/apps/transaction/: admin.py  models.py  signals.py
server/apps/user/: admin.py  managers.py  models.py
server/common/: constans.py  generate.py  validators.py
server/settings/: settings.py  urls.py  yasg.py
server/workers/user/: tasks.py
(+16 files in other folders)
